2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c: Instead of filtering Content-* headers
	inside GMimeObject subclasses, filter them in the parser. This way
	header fetching works as expected in subparts which might have
	non-standard headers (X-* and whatnot).

2012-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-encodings.c (g_mime_content_encoding_from_string):
	Match non-standard encodings: 7-bit, 8-bit, and x-uue (the
	standard names for these are 7bit, 8bit, and x-uuencode).

2012-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-common.c (g_mime_strdup_trim): New function that
	optimizes g_strstrip combined with g_strdup in both speed and
	memory usage (g_strstrip won't shrink the size of the dup'd
	memory).

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* configure.ac: Add a --enable-smime flag which defaults to "no".

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.5

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_message_part): Make sure that
	a boundary doesn't appear before we start scanning for the
	headers.

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* src/uuencode.c:
	* src/uudecode.c: Moved to examples/

2012-02-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_verify): In cases where gpg does
	not exit with code 0, only set the GError when we've gotten no
	signer information from gpg (otherwise we return the list of
	signers, which will presumably include why the verification failed
	in the status of each signer). Fixes bug #668085.

2012-02-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part-iter.c: Fixed to behave the same as IMAP and
	also to actually work.

2012-02-16  Jeffrey Stedfast  <jeff@xamarin.com>

	* mono/Multipart.custom: Fixed the binding for Multipart.Count.

2012-02-04  Jeffrey Stedfast  <fejj@gnome.org>
